--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td><img src="https://github.com/sitarahe/cv/blob/main/images/Mikk.jpg" alt="Kiva mees" height="400"></td>
+      <td><img src="https://raw.githubusercontent.com/sitarahe/cv/main/images/Mikk.jpg" alt="Kiva mees" height="400"></td>
       <td>  <h1>Mikk</h1>
         <p><em>Lambi jorss <b><a href="http://www.voru.ee/">võrust</a></b></em></p>
         <p>Siia tuleb mingi lambi tekst, sest ma ei viitis midagi eriti <em><strong>mõelda.</strong></em></p></td>
